# masclet-imperi-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  aerich.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: database.py  main.py  models.py
app/api/endpoints/: __init__.py  animals.py  auth.py  dashboard.py  explotacions.py  imports.py
app/auth/: auth_utils.py
app/core/: auth.py  config.py  error_handlers.py  middleware.py  permissions.py
app/models/: __init__.py  animal.py  parto.py  user.py
app/routes/: __init__.py  animals.py
app/schemas/: animal.py
app/scripts/: init_db.py  verify_db.py
app/services/: backup_service.py  data_service.py  import_service.py
migrations/models/: 0_20250209183210_init.py  0_20250210195129_init.py  1_20250209220853_update_animal_constraints.py
scripts/: docker-manage.ps1
tests/: conftest.py  test_import_service.py
